[package]
name = "gpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1"
winit = "0.29.10"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0.79"
pollster = "0.3.0"
tobj = "4.0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
